tests/baselines/reference/typesWithPrivateConstructor.errors.txt
tests/cases/conformance/types/members/typesWithPrivateConstructor.ts(7,9): error TS2655: Constructor 'C(): C' is private and only accessible within class 'C'.
tests/cases/conformance/types/members/typesWithPrivateConstructor.ts(15,10): error TS2346: Supplied parameters do not match any signature of call target.


==== tests/cases/conformance/types/members/typesWithPrivateConstructor.ts (2 errors) ====
    // private constructors are not allowed
    
    class C {
        private constructor() { }
    }
    
    var c = new C();
            ~~~~~~~
!!! error TS2655: Constructor 'C(): C' is private and only accessible within class 'C'.
    var r: () => void = c.constructor;
    
    class C2 {
        private constructor(x: number);
        private constructor(x: any) { }
    }
    
    var c2 = new C2();
             ~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    var r2: (x: number) => void = c2.constructor;